argocd/internal/kube-prometheus-stack/resources/grafana-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
    igw-type: internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.willyhu.tw
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - grafana.willyhu.tw
      tls:
        credentialName: grafana-willyhu-tw-tls
        mode: SIMPLE
