argocd/internal/kube-prometheus-stack/resources/prometheus-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
    igw-type: internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prometheus.willyhu.tw
