argocd/internal/kube-prometheus-stack/resources/prometheus-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtualservice
  namespace: monitoring
spec:
  hosts:
    - prometheus.willyhu.tw
  gateways:
    - prometheus-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-kube-prometheus-stack-prometheus
            port:
              number: 9090
